# bitcoin-indexer

./: .dockerignore  .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  Indexer.toml  README.md  package-lock.json  package.json  smth.sh  test-script.sh
.cargo/: config.toml
.github/workflows/: ci.yaml  pr-mutants.yml  vercel.yml
api/: package-lock.json  package.json
api/ordinals/: README.md  package-lock.json  package.json
api/ordinals/src/: index.ts
api/ordinals/src/api/: init.ts  schemas.ts
api/ordinals/src/metrics/: metrics.ts
api/ordinals/src/pg/: pg-store.ts
api/runes/: package-lock.json  package.json
api/runes/src/: env.ts
api/runes/src/api/: schemas.ts
api/runes/tests/: env.test.ts
cargo-tasks/: Cargo.toml
cargo-tasks/src/: main.rs
components/bitcoind/: Cargo.toml
components/bitcoind/src/: lib.rs
components/chainhook-types-rs/src/: rosetta.rs
components/cli/: Cargo.toml  build.rs
components/cli/src/: main.rs
components/config/src/: config.rs  generator.rs  toml.rs
components/ord/: Cargo.toml
components/ord/src/: chain.rs  decimal_sat.rs  envelope.rs  epoch.rs  inscription.rs  rarity.rs  tag.rs
components/ordhook-core/src/: lib.rs
components/ordinals/: Cargo.toml
components/ordinals/src/: lib.rs
components/postgres/: Cargo.toml
components/runes/: Cargo.toml
components/runes/src/: lib.rs  service.rs
dockerfiles/: docker-compose.test.yml
dockerfiles/components/: bitcoin-indexer.dockerfile  test-environment.dockerfile
migrations/runes/: V5__balance_changes-rune_id_address_index.sql
scripts/: run-tests.sh
(+115 files in other folders)
